--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 //Discord JS 
 CLIENT_TOKEN = ODYwNTI0NDc0MjI2ODM1NDc2.YN8f3g.Yr4Fsnbtun_oKyiHON6KeBCdp50
-CLIENT_PREFIX = .
+CLIENT_PREFIX = ?
 
 //Google Sheets
 GOOGLE_SHEET_ID = 1aRfa0bgWPQ-B-Ty5hJk_dSceuMCGTNEKiJxEUhxVg1k
